fixed clipping issue w/ rotated stars

--- a/src/components/Layout.scss
+++ b/src/components/Layout.scss
@@ -33,6 +33,7 @@
     rgba(0, 40, 104, 1) 30%
   );
   position: relative;
+  overflow: hidden;
   z-index: 1;
 
   &::after {
@@ -43,7 +44,7 @@
     width: 120vw;
     height: 80vw;
     top: 20%;
-    left: 0%;    
+    left: 0%;
     font-size: 20vw;
     font-family: 'Times New Roman', Times, serif;
     transform: rotateZ(-15deg);
